# trex

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
docs/: 404.html  _config.yml  index.html  index.md  sitemap.xml
src/: main.py  utils.py
tests/: test_trex.py
trex/: main.py  meta.py  pyproject.toml  utils.py
trex/tests/: test_trex.py
trex/trex/: main.py  utils.py
