[tool.poetry]
name = "trex"
version = "0.1.2"
description = "Templatosaurus Rex 🦖 Create and manage project templates in your terminal"
authors = ["Paul Haedrich <paul@berrysauce.me>"]
readme = "README.md"

[tool.poetry.scripts]
trex = "trex.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
