[tool.poetry]
name = "trex"
version = "0.1.7"
description = "Templatosaurus Rex 🦖 Create and manage project templates in your terminal"
license = "GPL-3.0-only"
authors = ["Paul Haedrich <paul@berrysauce.me>"]
readme = "README.md"
homepage = "https://berrysauce.me/trex"
repository = "https://github.com/berrysauce/trex"
documentation = "https://berrysauce.me/trex"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
trex = "trex.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
tabulate = "^0.8.9"
GitPython = "^3.1.27"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
